Fixed spaccing at top of nav buttons on mobile view.

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ a:hover {
   display: flex;
   justify-content: center;
   order: 3;
-  margin: 30px 11px;
+  margin: 11px ;
   width: 92%;
 }
 
